--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
   --soft-cyan: hsl(174, 77%, 80%);
   --strong-cyan: hsl(174, 86%, 45%);
+  --dark-cyan: hsl(174, 66%, 41%);
   --light-grayish-red: hsl(14, 92%, 95%);
   --light-red: hsl(15, 100%, 70%);
   --pale-blue: hsl(226, 100%, 87%);
@@ -93,11 +94,84 @@ header p {
   font-size: 0.75rem;
 }
 
-.pageview #traffic {
-  margin-top: 1.625rem;
+/* Slider */
+.range {
+  position: relative;
   width: 100%;
 }
 
+.bar {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  top: 50%;
+  overflow: hidden;
+  transform: translateY(50%);
+  background-color: var(--light-grayish-blue);
+}
+
+.fill {
+  display: block;
+  width: 0;
+  height: 100%;
+  background-color: var(--soft-cyan);
+}
+
+.slider {
+  position: relative;
+  z-index: 2;
+  appearance: none;
+  -webkit-appearance: none;
+  margin-top: 1.625rem;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  background: transparent;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: url(./images/icon-slider.svg) center center no-repeat
+    var(--strong-cyan);
+  box-shadow: 0 1rem 1.25rem var(--soft-cyan);
+  cursor: pointer;
+  transition: all 0.3s;
+  z-index: 2;
+}
+
+.slider::-webkit-slider-thumb:active {
+  background: url(./images/icon-slider.svg) center center no-repeat
+    var(--dark-cyan);
+  cursor: grabbing;
+}
+
+/* Firefox */
+.slider::-moz-range-thumb {
+  width: 40px;
+  height: 40px;
+  border: 0;
+  border-radius: 50%;
+  background: url(./images/icon-slider.svg) center center no-repeat
+    var(--strong-cyan);
+  box-shadow: 0 1rem 1.25rem var(--soft-cyan);
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.slider::-moz-range-thumb:active {
+  background: url(./images/icon-slider.svg) center center no-repeat
+    var(--dark-cyan);
+
+  cursor: grabbing;
+}
+
+/* Price */
 .pageview .price {
   margin-top: 1.875rem;
   color: var(--dark-desaturated-blue);
@@ -125,6 +199,7 @@ header p {
 /* imput checkbox */
 .payment-type #payment {
   margin: 0 1.5rem;
+  appearance: none;
   position: relative;
   cursor: pointer;
 }
